apps/demo/keycloak/admin-access-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keycloak-admin-access
  namespace: keycloak
spec:
  gateways:
    - istio-admin-gateway/istio-admin-gateway
  hosts:
    - keycloak.admin.dev.techbrewhq.com
  http:
    - headers:
        request:
          add:
            istio-mtls-client-certificate: "%DOWNSTREAM_PEER_CERT%"
          remove:
            - istio-mtls-client-certificate
      route:
        - destination:
            host: keycloak.keycloak.svc.cluster.local
            port:
              number: 8080
