apps/demo/keycloak/keycloak-tenant-rm-pubpath-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keycloak-rm-pub-path
  namespace: keycloak
spec:
  gateways:
    - istio-tenant-gateway/istio-tenant-gateway
  hosts:
    - sso.dev.techbrewhq.com
  http:
    - headers:
        request:
          add:
            istio-mtls-client-certificate: "%DOWNSTREAM_PEER_CERT%"
          remove:
            - istio-mtls-client-certificate
      match:
        - name: redirect-welcome
          uri:
            exact: /
        - name: redirect-admin
          uri:
            prefix: /admin
        - name: redirect-master-realm
          uri:
            prefix: /realms/master
        - name: redirect-metrics
          uri:
            prefix: /metrics
      redirect:
        uri: /realms/techbrewhq/account
